image url fixes

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <h1>Rock Paper Scissors</h1>
     <div class="choices">
         <div class="choice" id="rock">
-            <img src="../images/rock.png" alt="rock img">
+            <img src="https://raw.githubusercontent.com/Pruthviraj75/Rock_Paper_Scissors_Game/main/images/rock.png" alt="rock img">
         </div>
         <div class="choice" id="paper">
-            <img src="../images/paper.png" alt="paper img">
+            <img src="https://raw.githubusercontent.com/Pruthviraj75/Rock_Paper_Scissors_Game/main/images/paper.png" alt="paper img">
         </div>
         <div class="choice" id="scissors">
-            <img src="../images/scissors.png" alt="scissors img">
+            <img src="https://raw.githubusercontent.com/Pruthviraj75/Rock_Paper_Scissors_Game/main/images/scissors.png" alt="scissors img">
         </div>
     </div>
 
